# VisionForge

./: .gitattributes  .gitignore  CODEOWNERS  README.md  pyproject.toml  start-visionforge.bat
.github/workflows/: ci.yml
app/: README.md  pyproject.toml
app/src/visionforge_app/: __init__.py  provider_config.py
app/src/visionforge_app/api/: __init__.py  __main__.py  app.py
app/src/visionforge_app/export/: __init__.py  dataset.py
app/src/visionforge_app/importer/: __init__.py  batch.py  errors.py  pipeline.py
app/src/visionforge_app/processing/: __init__.py  run.py
app/src/visionforge_app/query/: __init__.py  media.py
app/src/visionforge_app/release/: __init__.py  builder.py  standalone_runner.py
app/src/visionforge_app/training/: __init__.py  lifecycle.py  manager.py  tiny_detector.py  worker.py
app/tests/: test_api.py  test_api_main.py  test_dataset_export.py  test_import_directory.py  test_import_media.py  test_importer_contract.py  test_media_query.py  test_process_media.py  test_provider_config.py  test_training.py
core/: pyproject.toml
core/src/visionforge_core/: __init__.py
core/src/visionforge_core/calibration/: __init__.py  engine.py  flow.py
core/src/visionforge_core/contracts/: __init__.py  calibration.py  claims.py  ledgers.py  media.py  providers.py  release.py  taxonomy.py  teaching.py  training.py
core/src/visionforge_core/dataset/: __init__.py  teaching.py  versions.py
core/src/visionforge_core/evaluation/: __init__.py  feedback.py
core/src/visionforge_core/orchestrator/: __init__.py  runs.py
core/src/visionforge_core/providers/: __init__.py  base.py
core/src/visionforge_core/review/: __init__.py  service.py
core/src/visionforge_core/storage/: __init__.py  database.py  errors.py  media_store.py  project.py  repositories.py
core/src/visionforge_core/teaching/: __init__.py  service.py
core/tests/: test_calibration.py  test_calibration_flow.py  test_claims.py  test_dataset.py  test_ledgers.py  test_media_query.py  test_orchestrator.py  test_pr_scope.py  test_providers.py  test_review.py  test_storage.py  test_taxonomy.py  test_teaching.py  test_teaching_dataset.py
docs/: README.md  交接手冊.md
docs/00-法規/: VisionForge_AI分工協議_v1.md  VisionForge_Constitution_v1.0.md
docs/01-定義/: 名詞定義表.md
docs/02-ADR/: ADR-0001-文件治理結構.md  ADR-0002-技術棧選定.md  ADR-0003-Claim-Schema-v1.md  ADR-0004-帳本Schema-v1.md  ADR-0005-儲存層設計.md  ADR-0006-匯入正規化與媒體身分政策.md  ADR-0007-校準引擎.md  ADR-0008-VisionProvider抽象.md  ADR-0009-UI-Python橋接.md  ADR-0010-審核中心骨架.md  ADR-模板.md
docs/03-規劃/: EXECUTION.md  GoodYolo_產品規劃書.md  VisionForge_重構開工書_R3.md
docs/04-評審/: GoodYolo_架構評審_R2.md
docs/05-討論/: 20260707-claim-schema-草案.md  README.md
docs/06-規格票/: 票-0001-UI殼與Bridge.md  票-0002-UI殼安全加固.md  票-0003-匯入管線.md  票-0004-Schema匯出與TS-codegen.md  票-0005-app匯入與查詢服務.md  票-0006-ui殼導航與匯入頁.md  票-0007-app-media查詢服務.md  票-0008-fixture-provider.md  票-0009-FastAPI服務層.md  票-0010-Electron-sidecar.md  票-0011-看懂站畫框UI.md  票-0012-app-process-media.md  票-0013-app審核API.md  票-0014-app校準接線.md  票-0015-整理站審核UI.md  票-0016-app資料集匯出.md  票-0017-OpenAI-provider.md
providers/: README.md  pyproject.toml
providers/src/visionforge_providers/: __init__.py  fixture.py  openai_vision.py
providers/tests/: test_fixture.py  test_openai_vision.py  test_package.py
scripts/: check_forbidden_imports.py  check_pr_scope.py  export_contract_schema.py
ui/: .dependency-cruiser.cjs  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
(+32 files in other folders)
