[project]
name = "visionforge-app"
version = "0.1.0"
description = "VisionForge 服務層：匯入管線與本機服務（依賴方向 服務→core，憲法 A3/D13）"
requires-python = ">=3.12"
dependencies = [
    "visionforge-core",
    "visionforge-providers",
    "fastapi>=0.116",
    "httpx>=0.28",
    "pillow>=10.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35",
]

[project.optional-dependencies]
training = ["numpy==2.3.5", "torch==2.9.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visionforge_app"]

[tool.uv.sources]
visionforge-core = { workspace = true }
visionforge-providers = { workspace = true }
